--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo Entered the install phase...
-      - apt-get update -y
+      #- apt-get update -y
       #- apt-get install -y maven
     finally:
       - echo This always runs even if the update or install command fails 
@@ -18,7 +18,8 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - mvn install
+      - aws cloudformation create-stack --stack-name s3blog --template-body cloudformation.yml
+      #- mvn install
     finally:
       - echo This always runs even if the install command fails
   post_build:
