--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Creats an S3 bucket
+Description: Creats an S3 bucket only
 
 Resources:
  # Creates s3 bucket
